MiniJavaParser.java
/* MiniJavaParser.java */
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
    import analisador_semantico.syntaxtree.*;

    public class MiniJavaParser implements MiniJavaParserConstants {
        public static void main(String[] args) {
            try {
                java.io.FileInputStream file = new java.io.FileInputStream(new java.io.File(args[0]));
                MiniJavaParser MyParser = new MiniJavaParser(file);
                MyParser.Goal();
                System.out.println("O programa est\u00e1 correto lexicamente e sintaticamente!");
            }
            catch (Exception e) {
                System.out.println("Programa com erro l\u00e9xico ou sint\u00e1tico!\u005cn" + e.toString());
            }
      }

  static final public Program Goal() throws ParseException {MainClass main;
    ClassDecl class_decl;
    ClassDeclList class_list = new ClassDeclList();
    main = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      class_decl = ClassDecl();
class_list.addElement(class_decl);
    }
    jj_consume_token(0);
{if ("" != null) return new Program (main, class_list);}
    throw new Error("Missing return statement in function");
  }

//Analisador Léxico
  static final public MainClass MainClass() throws ParseException {Identifier id1;
    Identifier id2;
    Statement statement;
    jj_consume_token(CLASS);
    id1 = Identifier();
    jj_consume_token(LEFT_BRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LEFT_PARENTHESES);
    jj_consume_token(STRING);
    jj_consume_token(LEFT_BRACKET);
    jj_consume_token(RIGHT_BRACKET);
    id2 = Identifier();
    jj_consume_token(RIGHT_PARENTHESES);
    jj_consume_token(LEFT_BRACE);
    statement = Statement();
    jj_consume_token(RIGHT_BRACE);
    jj_consume_token(RIGHT_BRACE);
{if ("" != null) return new MainClass(id1, id2, statement);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDecl() throws ParseException {Identifier id1;
    Identifier id2;
    VarDeclList var_list = new VarDeclList();
    VarDecl var;
    MethodDecl method;
    MethodDeclList method_list = new MethodDeclList();
    if (jj_2_1(3)) {
      jj_consume_token(CLASS);
      id1 = Identifier();
      jj_consume_token(LEFT_BRACE);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case BOOLEAN:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        var = VarDecl();
var_list.addElement(var);
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PUBLIC:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        method = MethodDecl();
method_list.addElement(method);
      }
      jj_consume_token(RIGHT_BRACE);
{if ("" != null) return new ClassDeclSimple(id1, var_list, method_list);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        jj_consume_token(CLASS);
        id1 = Identifier();
        jj_consume_token(EXTENDS);
        id2 = Identifier();
        jj_consume_token(LEFT_BRACE);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INT:
          case BOOLEAN:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            break label_4;
          }
          var = VarDecl();
var_list.addElement(var);
        }
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case PUBLIC:{
            ;
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            break label_5;
          }
          method = MethodDecl();
method_list.addElement(method);
        }
        jj_consume_token(RIGHT_BRACE);
{if ("" != null) return new ClassDeclExtends(id1, id2, var_list, method_list);}
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDecl() throws ParseException {Type type;
    Identifier id1;
    type = Type();
    id1 = Identifier();
    jj_consume_token(SEMI);
{if ("" != null) return new VarDecl(type, id1);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDecl() throws ParseException {Type type;
    Identifier id1;
    FormalList formal_list = new FormalList();
    VarDecl var;
    VarDeclList var_list = new VarDeclList();
    Statement statement;
    StatementList statement_list = new StatementList();
    Exp exp;
    ExpList exp_list = new ExpList();
    jj_consume_token(PUBLIC);
    type = Type();
    id1 = Identifier();
    jj_consume_token(LEFT_PARENTHESES);
    formal_list = FormalList();
    jj_consume_token(RIGHT_PARENTHESES);
    jj_consume_token(LEFT_BRACE);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      var = VarDecl();
var_list.addElement(var);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case PRINT:
      case LEFT_BRACE:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_7;
      }
      statement = Statement();
statement_list.addElement(statement);
    }
    jj_consume_token(RETURN);
    exp = Expression();
    jj_consume_token(SEMI);
    jj_consume_token(RIGHT_BRACE);
{if ("" != null) return new MethodDecl(type, id1, formal_list, var_list, statement_list, exp);}
    throw new Error("Missing return statement in function");
  }

  static final public Formal Formal() throws ParseException {Type type;
    Identifier id;
    type = Type();
    id = Identifier();
{if ("" != null) return new Formal(type, id);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalList FormalList() throws ParseException {FormalList list = new FormalList();
    Formal formal;
    Formal formal2;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case BOOLEAN:
    case IDENTIFIER:{
      formal = Formal();
list.addElement(formal);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_8;
        }
        formal2 = FormalRest();
list.addElement(formal2);
      }
{if ("" != null) return list;}
      break;
      }
    default:
      jj_la1[8] = jj_gen;
{if ("" != null) return list;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Formal FormalRest() throws ParseException {// {"," Type() Identifier()}
    Type type;
    Identifier id;
    jj_consume_token(COMMA);
    type = Type();
    id = Identifier();
{if ("" != null) return new Formal(type, id);}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
    if (jj_2_3(2)) {
      jj_consume_token(INT);
      jj_consume_token(LEFT_BRACKET);
      jj_consume_token(RIGHT_BRACKET);
{if ("" != null) return new IntArrayType();}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        jj_consume_token(INT);
{if ("" != null) return new IntegerType();}
        break;
        }
      case IDENTIFIER:{
        Identifier();
{if ("" != null) return new IdentifierType(token.image);}
        break;
        }
      case BOOLEAN:{
        jj_consume_token(BOOLEAN);
{if ("" != null) return new BooleanType();}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {Statement statement;
    Statement statement2;
    Identifier id;
    StatementList statement_list = new StatementList();
    Exp exp;
    Exp exp2;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LEFT_BRACE:{
      jj_consume_token(LEFT_BRACE);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case WHILE:
        case PRINT:
        case LEFT_BRACE:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_9;
        }
        statement = Statement();
statement_list.addElement(statement);
      }
      jj_consume_token(RIGHT_BRACE);
{if ("" != null) return new Block(statement_list);}
      break;
      }
    case IF:{
      jj_consume_token(IF);
      jj_consume_token(LEFT_PARENTHESES);
      exp = Expression();
      jj_consume_token(RIGHT_PARENTHESES);
      statement = Statement();
      jj_consume_token(ELSE);
      statement2 = Statement();
{if ("" != null) return new If(exp, statement, statement2);}
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      jj_consume_token(LEFT_PARENTHESES);
      exp = Expression();
      jj_consume_token(RIGHT_PARENTHESES);
      statement = Statement();
{if ("" != null) return new While(exp, statement);}
      break;
      }
    case PRINT:{
      jj_consume_token(PRINT);
      jj_consume_token(LEFT_PARENTHESES);
      exp = Expression();
      jj_consume_token(RIGHT_PARENTHESES);
      jj_consume_token(SEMI);
{if ("" != null) return new Print(exp);}
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      if (jj_2_4(2)) {
        id = Identifier();
        jj_consume_token(ASSIGN);
        exp = Expression();
        jj_consume_token(SEMI);
{if ("" != null) return new Assign(id, exp);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          id = Identifier();
          jj_consume_token(LEFT_BRACKET);
          exp = Expression();
          jj_consume_token(RIGHT_BRACKET);
          jj_consume_token(ASSIGN);
          exp2 = Expression();
          jj_consume_token(SEMI);
{if ("" != null) return new ArrayAssign(id, exp, exp2);}
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Expression() throws ParseException {Exp expression;
    Identifier id;
    IdentifierExp idexp;
    NewObject newobject;
    NewArray newarray;
    This th;
    True t;
    False f;
    Not not;
    IntegerLiteral integerliteral;
    if (jj_2_5(2)) {
      jj_consume_token(NEW);
      jj_consume_token(INT);
      jj_consume_token(LEFT_BRACKET);
      expression = Expression();
      jj_consume_token(RIGHT_BRACKET);
newarray = new NewArray(expression);
{if ("" != null) return ExpressionRecursion(newarray);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NEW:{
        jj_consume_token(NEW);
        id = Identifier();
        jj_consume_token(LEFT_PARENTHESES);
        jj_consume_token(RIGHT_PARENTHESES);
newobject = new NewObject(id);
{if ("" != null) return ExpressionRecursion(newobject);}
        break;
        }
      case IDENTIFIER:{
        Identifier();
idexp = new IdentifierExp(token.image);
{if ("" != null) return ExpressionRecursion(idexp);}
        break;
        }
      case TRUE:{
        jj_consume_token(TRUE);
t = new True();
{if ("" != null) return ExpressionRecursion(t);}
        break;
        }
      case FALSE:{
        jj_consume_token(FALSE);
f = new False();
{if ("" != null) return ExpressionRecursion(f);}
        break;
        }
      case THIS:{
        jj_consume_token(THIS);
th = new This();
{if ("" != null) return ExpressionRecursion(th);}
        break;
        }
      case INTEGER_LITERAL:{
        jj_consume_token(INTEGER_LITERAL);
integerliteral = new IntegerLiteral(Integer.parseInt(token.image));
{if ("" != null) return ExpressionRecursion(integerliteral);}
        break;
        }
      case NOT:{
        jj_consume_token(NOT);
        expression = Expression();
not = new Not(expression);
{if ("" != null) return ExpressionRecursion(not);}
        break;
        }
      case LEFT_PARENTHESES:{
        jj_consume_token(LEFT_PARENTHESES);
        expression = Expression();
        jj_consume_token(RIGHT_PARENTHESES);
{if ("" != null) return ExpressionRecursion(expression);}
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExpressionRecursion(Exp exp) throws ParseException {Identifier id;
    ExpList explist;
    Exp expression;
    And and;
    LessThan less;
    Plus plus;
    Minus minus;
    Times times;
    ArrayLookup arraylookup;
    ArrayLength arraylength;
    Call call;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AND:{
      jj_consume_token(AND);
      expression = Expression();
and = new And(exp,expression);
{if ("" != null) return ExpressionRecursion(and);}
      break;
      }
    case 45:{
      jj_consume_token(45);
      expression = Expression();
less = new LessThan(exp,expression);
{if ("" != null) return ExpressionRecursion(less);}
      break;
      }
    case PLUS:{
      jj_consume_token(PLUS);
      expression = Expression();
plus = new Plus(exp,expression);
{if ("" != null) return ExpressionRecursion(plus);}
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
      expression = Expression();
minus = new Minus(exp,expression);
{if ("" != null) return ExpressionRecursion(minus);}
      break;
      }
    case TIMES:{
      jj_consume_token(TIMES);
      expression = Expression();
times = new Times(exp,expression);
{if ("" != null) return ExpressionRecursion(times);}
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      if (jj_2_6(2)) {
        jj_consume_token(DOT);
        id = Identifier();
        jj_consume_token(LEFT_PARENTHESES);
explist = ExpList();
        jj_consume_token(RIGHT_PARENTHESES);
call = new Call(exp,id,explist);
{if ("" != null) return ExpressionRecursion(call);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case DOT:{
          jj_consume_token(DOT);
          jj_consume_token(LENGTH);
arraylength = new ArrayLength(exp);
{if ("" != null) return ExpressionRecursion(arraylength);}
          break;
          }
        case LEFT_BRACKET:{
          jj_consume_token(LEFT_BRACKET);
          expression = Expression();
          jj_consume_token(RIGHT_BRACKET);
arraylookup = new ArrayLookup(exp,expression);
{if ("" != null) return ExpressionRecursion(arraylookup);}
          break;
          }
        default:
          jj_la1[15] = jj_gen;
{if ("" != null) return exp;}
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public ExpList ExpList() throws ParseException {Exp expression1,expression2;
    ExpList expList = new ExpList();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case NOT:
    case LEFT_PARENTHESES:
    case IDENTIFIER:
    case INTEGER_LITERAL:{
      expression1 = Expression();
expList.addElement(expression1);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_10;
        }
        expression2 = ExpRest();
expList.addElement(expression2);
      }
{if ("" != null) return expList;}
      break;
      }
    default:
      jj_la1[17] = jj_gen;
{if ("" != null) return expList;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExpRest() throws ParseException {Exp exp;
    jj_consume_token(COMMA);
    exp = Expression();
{if ("" != null) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public Identifier Identifier() throws ParseException {
    jj_consume_token(IDENTIFIER);
{if ("" != null) return new Identifier(token.image);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_3R_15()
 {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3R_14()
 {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3_2()
 {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_12()
 {
    if (jj_3R_13()) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3R_13()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3_3()
 {
    if (jj_scan_token(INT)) return true;
    if (jj_scan_token(LEFT_BRACKET)) return true;
    return false;
  }

  static private boolean jj_3_5()
 {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_scan_token(CLASS)) return true;
    if (jj_3R_11()) return true;
    if (jj_scan_token(LEFT_BRACE)) return true;
    return false;
  }

  static private boolean jj_3_4()
 {
    if (jj_3R_11()) return true;
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  static private boolean jj_3R_11()
 {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3R_16()
 {
    if (jj_scan_token(BOOLEAN)) return true;
    return false;
  }

  static private boolean jj_3_6()
 {
    if (jj_scan_token(DOT)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MiniJavaParserTokenManager token_source;
  static JavaCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[18];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40000,0xc000000,0x80000,0xc000000,0x80000,0x40000,0x1a00,0x0,0xc000000,0xc000000,0x1a00,0x1a00,0x0,0x3c000,0xf0000000,0x0,0x0,0x3c000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x800,0x0,0x800,0x0,0x0,0x804,0x400,0x800,0x800,0x804,0x4,0x800,0x1812,0x2000,0x240,0x400,0x1812,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[6];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public MiniJavaParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MiniJavaParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new MiniJavaParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public MiniJavaParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new JavaCharStream(stream, 1, 1);
    token_source = new MiniJavaParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
